Add FindByG[a +FindByname Function +Test